[package]
name = "pykeepass-rs"
version = "0.1.0"
authors = ["david <davidventura27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keepass = "0.4.9"

[lib]
name = "pykeepass_rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.3"
features = ["extension-module"]
