[package]
name = "pykeepass-rs"
version = "0.1.4"
authors = ["david <davidventura27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keepass = "0.4.9"

[dependencies.cpython]
version = "0.6"
features = ["extension-module"]

[lib]
name = "pykeepass_rs"
crate-type = ["cdylib"]
