[package]
name = "pykeepass-rs"
version = "0.1.15"
authors = ["david <davidventura27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keepass = { git = "https://github.com/davidventura/keepass-rs", "branch" = "next" }
#keepass = { path = "../keepass-rs" }

[dependencies.cpython]
version = "0.6"
features = ["extension-module"]

[dependencies.aes]
# only here to enable armv8
# version is the same as the one on keepass' config
version = "0.7.5"
features = ["armv8"]

[lib]
name = "pykeepass_rs"
crate-type = ["cdylib"]
